Update app endpoint and fix logo overflow

--- a/src/applications/third-party-app-directory/sass/index.scss
+++ b/src/applications/third-party-app-directory/sass/index.scss
@@ -19,9 +19,12 @@
 
   .third-party-app {
     border-radius: 5px;
+    overflow: hideen;
 
     img {
       max-width: 70px;
+      min-height: 70px;
+      object-fit: cover;
     }
 
     .learn-more {
